<resources>

    //----App and Activity Strings
    <string name="rider_skill_tree_label">Rider Skill Tree</string>
    <string name="horse_skill_tree_label">Horse Skill Tree</string>
    <string name="app_name">Horse &amp; Riders Companion</string>
    <string name="title_activity_skill_tree">SkillTree</string>
    <string name="messages_label">Messages</string>
    <string name="settings_label">Settings</string>

    //----Generic
    <string name="dialog_general_error_Message">There was an error making the request</string>
    <string name="dialog_general_error_message">General Error</string>
    <string name="dialog_error_no_connection">No Connection</string>
    <string name="generic_error_title">An error occurred.</string>
    <string name="dialog_action_delete">Delete</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="time_unknown">Unknown Time</string>
    <string name="error_not_found">Not found</string>
    <string name="edit_time_wild_card">%1$s</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_action_ok">OK</string>
    <string name="disable">Disable</string>
    <string name="horses">Horses:</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="submit">Submit</string>
    <string name="enable">Enable</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="off">Off</string>

    //----Login and Register
    <string name="horse_and_riders_companion_logo">Horse and Riders Companion logo</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="create_account_title">Create account</string>
    <string name="name_hint">First &amp; Last Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_in">Sign In</string>

    //-----Navigation Drawer
    <string name="menu_heading_horse_and_rider">Horse &amp; Riders \nCompanion</string>
    <string name="menu_item_switch_account">Switch Account</string>
    <string name="menu_item_profile_edit">Edit Profile</string>
    <string name="menu_heading_account">Accounts</string>
    <string name="menu_item_logout">Sign Out</string>
    <string name="menu_item_support">Support</string>
    <string name="action_settings">Settings</string>
    <string name="action_glossary">Glossary</string>
    <string name="action_messages">Messages</string>
    <string name="nav_closed">Nav Closed</string>
    <string name="menu_heading_app">App</string>
    <string name="menu_item_rate">Rate</string>
    <string name="nav_open">Nav Open</string>

    //----Dialog Switch Account
    <string name="dialog_title_select_account">Select Account</string>
    <string name="no_alternate_accounts">No alternate accounts</string>
    <string name="description">Description</string>

    //----Skill Tree
    <string name="empty_skill">No Items: Click to add a new Skill</string>
    <string name="create_a_new_category">Create a new Category</string>
    <string name="empty_level">No Levels: Click to add a Level</string>
    <string name="no_progress">No Progress</string>
    <string name="learning">Learning</string>
    <string name="complete">Complete</string>

    //----Create Horse Dialog
    <string name="date_of_purchase">Date of Purchase</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="current_owner">Current Owner</string>
    <string name="verify">Verify</string>
    <string name="height">Height</string>
    <string name="color">Color</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>

    //----Send MessageDialog
    <string name="recipient">Recipient</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string-array name="message_types">
        <item>Student Request</item>
        <item>Student Horse Request</item>
        <item>Instructor Request</item>
        <item>Instructor Horse Request</item>
        <item>Edit Request</item>
        <item>Choose a Message Type</item>
    </string-array>


    //----Settings
    <string name="instructor_dialog">This will allow you to verify other Riders or Horses profiles as well as add them to your profile</string>
    <string name="change_theme_to_auto">This will automatically change Theme between day and night based on your local time</string>
    <string name="change_theme_to_night">This will change the default Theme to night only</string>
    <string name="change_theme_to_day">This will change Theme to Day only</string>
    <string name="auto_change_theme">Auto Change Day/Night</string>
    <string name="change_theme">Change Theme</string>
    <string name="night_mode">Night Mode</string>
    <string name="instructor">Instructor</string>

    //----Need to Organize

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="empty_resource">No Resources: Click to add +</string>
    <string name="resource_create_link_hint">Link address</string>
    <string name="hint_complete_level_description">Complete Level Description</string>
    <string name="hint_learning_level_description">Learning Level Description</string>
    <string name="sending">Sending</string>
    <string name="create_new_resource_label">Horse &amp; Riders Companion</string>
    <string name="title_too_short">Title too short</string>
    <string name="empty_field">Field cannot be left empty</string>
    <string name="mark_as_read">Mark as read</string>

    //---- Plurals
    <plurals name="time_seconds">
        <item quantity="one">%d s</item>
        <item quantity="other">%02d secs</item>
    </plurals>

    <plurals name="time_minutes">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>

    <plurals name="time_hours">
        <item quantity="one">%d hr</item>
        <item quantity="other">%d hrs</item>
    </plurals>

    <plurals name="time_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="time_weeks">
        <item quantity="one">%d wk</item>
        <item quantity="other">%d wks</item>
    </plurals>

    <plurals name="time_months">
        <item quantity="one">%d mth</item>
        <item quantity="other">%d mths</item>
    </plurals>

    <plurals name="time_years">
        <item quantity="one">%d yr</item>
        <item quantity="other">%d yrs</item>
    </plurals>

    <plurals name="comment_count">
        <item quantity="one">%d Comment</item>
        <item quantity="other">%d Comments</item>
    </plurals>


</resources>
