<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/login_root"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            tools:context=".view.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="16dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/login_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:padding="8dp"
            android:src="@drawable/vector_account"/>

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_weight="0.13"
            android:scaleType="fitCenter"
            android:src="@drawable/horse_logo_and_text"
            android:transitionName="logo"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:textAllCaps="false"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword|textNoSuggestions"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:elevation="4dp"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/login_link_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_double"

            android:gravity="center"
            android:padding="@dimen/spacing_normal"
            android:text="@string/no_account_yet_create_one"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/spacing_normal"
            android:text="@string/forgot_your_password"
            android:textColor="?android:attr/textColorPrimary"/>

    </LinearLayout>
</ScrollView>
